# haobasic

./: README.md
graphviz/: clean.sh  instrument.c  jsonrun.sh  my_debug.c  my_debug.h  pvrun.sh  readme.txt  test.c  test.cpp
graphviz/demo/: test.dot
graphviz/json/: Makefile
graphviz/jsontrace/: Makefile  instrument.c  stack.c  stack.h  symbols.c  symbols.h  trace.c
graphviz/pvtrace/: symbols.c
testcmake/: CMakeLists.txt  build.sh  build_static.sh  clean.sh  readme.txt  testadd.c  testadd.h  testuseadd.h
testeachother/: build.sh  build_static.sh  clean.sh  main.c  readme.txt  testadd.c  testsub.c  testsub.h
testgcc/: main.c  readme.txt  share_header.h.back  testuseadd.c
tools/bazel/: readme.txt
tools/bazel/stage1/main/: hello-world.cc
tools/llvm_graphviz/: linuxrun.sh  macrun.sh  main1.cpp  readme.txt
webassembly/add/: add.c  add.html  add.js  add.wasm  run.sh
webassembly/debug/: clean.sh  debug.c  debug.html  run.sh
webassembly/dependent/: dependent.cc  dependent.html  post-script.js  run.sh
webassembly/hello_world/: Cargo.toml  main.js  run.sh
webassembly/hello_world/src/: lib.rs
webassembly/hello_world2/: helloworld.c  helloworld.wasm  index.html  main.js  run.sh
webassembly/usefile/: clean.sh  dirs.html  hello.txt  idbfs.cc  idbfs.html  index.html  indexeddb.html  nodefs.cc  packdir.cc  packfile.cc  run.sh  websql.html
webassembly/usefile/dat_dir/: t1.txt  t2.txt
webassembly/usefile/dat_dir/sub_dir/: t3.txt
webrtc/: server.js  webrtc6.html
